--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.5.1",
     "nanoid": "^5.0.2",
     "next": "13.5.5",
     "react": "^18",
